--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ documentation = "https://sfackler.github.io/log4rs/doc/log4rs"
 toml = "0.1"
 time = "0.1"
 log = "0.2.1"
+
+[profile.test]
+debug = false
