--- a/test/log.toml
+++ b/test/log.toml
@@ -3,9 +3,13 @@ refresh_rate = 5
 [appender.console]
 kind = "console"
 
+[[appender.console.filter]]
+kind = "threshold"
+level = "error"
+
 [appender.file]
 kind = "file"
-path = "out.log"
+path = "error.log"
 pattern = "%d [%t] %l %M:%m"
 
 [root]
