--- a/test/log.toml
+++ b/test/log.toml
@@ -5,7 +5,7 @@ kind = "console"
 
 [[appender.console.filter]]
 kind = "threshold"
-level = "error"
+level = "trace"
 
 [appender.file]
 kind = "file"
@@ -13,7 +13,7 @@ path = "error.log"
 pattern = "%d [%t] %l %M:%m"
 
 [root]
-level = "warn"
+level = "trace"
 appenders = ["console"]
 
 [[logger]]
