--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ repository = "https://github.com/sfackler/log4rs"
 documentation = "https://sfackler.github.io/log4rs/doc/v0.3.3/log4rs"
 
 [dependencies]
-toml = "0.1"
 time = "0.1"
 log = "0.3"
 nom = "1.0.1"
 typemap = "0.3"
+serde = "0.7"
+serde-value = "0.1"
+serde_yaml = "0.2"
