--- a/test/log.toml
+++ b/test/log.toml
@@ -1,13 +1,13 @@
 refresh_rate = 5
 
-[appender.console]
+[appenders.console]
 kind = "console"
 
-[[appender.console.filter]]
+[[appenders.console.filter]]
 kind = "threshold"
 level = "error"
 
-[appender.file]
+[appenders.file]
 kind = "file"
 path = "error.log"
 pattern = "%d [%t] %l %M:%m"
@@ -16,8 +16,7 @@ pattern = "%d [%t] %l %M:%m"
 level = "warn"
 appenders = ["console"]
 
-[[logger]]
-name = "test::a"
+[loggers."test::a"]
 level = "info"
 appenders = ["file"]
-additive = false
+additive = true
