Add extensibility points to serde structs

--- a/src/file/serde.rs.in
+++ b/src/file/serde.rs.in
@@ -6,6 +6,8 @@ pub struct Config {
     pub root: Option<Root>,
     pub appenders: HashMap<String, Appender>,
     pub loggers: HashMap<String, Logger>,
+    #[serde(default)]
+    _p: Undeserializable,
 }
 
 #[derive(PartialEq, Debug)]
@@ -15,6 +17,8 @@ pub struct Root {
     pub level: DeLogLevelFilter,
     #[serde(default)]
     pub appenders: Vec<String>,
+    #[serde(default)]
+    _p: Undeserializable,
 }
 
 #[derive(PartialEq, Debug)]
@@ -25,6 +29,8 @@ pub struct Logger {
     #[serde(default)]
     pub appenders: Vec<String>,
     pub additive: Option<bool>,
+    #[serde(default)]
+    _p: Undeserializable,
 }
 
 #[derive(Deserialize)]
