Finish raw serde struct cleanup

--- a/src/append/file_serde.rs.in
+++ b/src/append/file_serde.rs.in
@@ -1,7 +1,7 @@
 #[derive(Deserialize)]
 #[serde(deny_unknown_fields)]
-pub struct FileAppenderConfig {
-    pub path: String,
-    pub encoder: Option<Encoder>,
-    pub append: Option<bool>,
+struct FileAppenderConfig {
+    path: String,
+    encoder: Option<Encoder>,
+    append: Option<bool>,
 }
