--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ json = ["serde_json"]
 [dependencies]
 time = "0.1"
 log = "0.3"
-nom = "1.0.1"
 typemap = "0.3"
 serde = "0.7"
 serde-value = "0.2"
+chrono = "0.2"
 serde_yaml = { version = "0.2", optional = true }
 serde_json = { version = "0.7", optional = true }
 toml = { version = "0.1.28", optional = true, default_features = false, features = ["serde"] }
