--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ json = ["serde_json"]
 antidote = "0.1"
 chrono = "0.2"
 crossbeam = "0.2.9"
+kernel32-sys = "0.2"
 libc = "0.2"
 log = "0.3"
 serde = "0.7"
