Add a highlight formatter to pattern syntax.
cc #3

--- a/test/log.toml
+++ b/test/log.toml
@@ -3,6 +3,9 @@ refresh_rate = 5
 [appenders.console]
 kind = "console"
 
+[appenders.console.encoder]
+pattern = "{d} [{t}] {h({l})} {M}:{m}{n}"
+
 [[appenders.console.filter]]
 kind = "threshold"
 level = "error"
