Make serde stuff a module rather than inlining

--- a/src/encode/pattern/serde.rs.in
+++ b/src/encode/pattern/serde.rs.in
@@ -1,5 +1,5 @@
 #[derive(Deserialize)]
 #[serde(deny_unknown_fields)]
-struct PatternEncoderConfig {
-    pattern: Option<String>,
+pub struct PatternEncoderConfig {
+    pub pattern: Option<String>,
 }
