--- a/test/log.toml
+++ b/test/log.toml
@@ -1,10 +1,10 @@
-refresh_rate = 5
+refresh_rate = "5 seconds"
 
 [appenders.console]
 kind = "console"
 
 [appenders.console.encoder]
-pattern = "{d} [{t}] {h({l})} {M}:{m}{n}"
+pattern = "{d(%+)(local)} [{t}] {h({l})} {M}:{m}{n}"
 
 [[appenders.console.filter]]
 kind = "threshold"
