--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,16 +16,18 @@ antidote = "0.1"
 chrono = "0.2"
 crossbeam = "0.2.9"
 humantime = "0.1"
-kernel32-sys = "0.2"
 libc = "0.2"
 log = "0.3"
 serde = "0.7.5"
 serde-value = "0.2"
 typemap = "0.3"
-winapi = "0.2"
 serde_json = { version = "0.7", optional = true }
 serde_yaml = { version = "0.2", optional = true }
 toml = { version = "0.1.28", optional = true, default_features = false, features = ["serde"] }
+
+[target.'cfg(windows)'.dependencies]
+kernel32-sys = "0.2"
+winapi = "0.2"
 
 [dev-dependencies]
 tempdir = "0.3"
