Refactoring and enhancement of RFC 5424 support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "A highly configurable multi-output logging implementation for the
 license = "MIT/Apache-2.0"
 repository = "https://github.com/sfackler/log4rs"
 documentation = "https://sfackler.github.io/log4rs/doc/v0.4.7/log4rs"
+keywords = ["logs", "logging", "syslog"]
 
 [features]
 yaml = ["serde_yaml"]
@@ -24,6 +25,7 @@ typemap = "0.3"
 serde_json = { version = "0.7", optional = true }
 serde_yaml = { version = "0.2", optional = true }
 toml = { version = "0.1.28", optional = true, default_features = false, features = ["serde"] }
+time = "0.1"
 
 [target.'cfg(windows)'.dependencies]
 kernel32-sys = "0.2"
