--- a/src/append/syslog/serde.rs.in
+++ b/src/append/syslog/serde.rs.in
@@ -1,13 +1,12 @@
 // use file::raw::Encoder;
-use append::syslog::rfc5424;
+use append::syslog::FormatConf;
 
 #[derive(Deserialize)]
 #[serde(deny_unknown_fields)]
 pub struct SyslogAppenderConfig {
     pub protocol: Option<String>,
     pub address: Option<String>,
-    pub format: Option<String>,
     pub max_len: Option<u16>,
     // pub encoder: Option<Encoder>,
-    pub rfc5424: Option<rfc5424::Format>
+    pub format: Option<FormatConf>
 }
