Make configs extensible

--- a/src/append/console/serde.rs.in
+++ b/src/append/console/serde.rs.in
@@ -4,5 +4,7 @@ use file::raw::Encoder;
 #[serde(deny_unknown_fields)]
 pub struct ConsoleAppenderConfig {
     pub encoder: Option<Encoder>,
+    #[serde(skip_deserializing)]
+    _p: (),
 }
 
