--- a/src/encode/pattern/serde.rs.in
+++ b/src/encode/pattern/serde.rs.in
@@ -2,4 +2,6 @@
 #[serde(deny_unknown_fields)]
 pub struct PatternEncoderConfig {
     pub pattern: Option<String>,
+    #[serde(skip_deserializing)]
+    _p: (),
 }
