Directly pass configs into deserialize
Add some indirection that does the parse for you so serde_value isn't
exposed.

--- a/src/append/console/serde.rs.in
+++ b/src/append/console/serde.rs.in
@@ -1,10 +1,7 @@
-use file::raw::Encoder;
-
+/// The console appender's configuration.
 #[derive(Deserialize)]
 #[serde(deny_unknown_fields)]
 pub struct ConsoleAppenderConfig {
-    pub encoder: Option<Encoder>,
-    #[serde(skip_deserializing)]
-    _p: (),
+    encoder: Option<Encoder>,
 }
 
