--- a/src/encode/pattern/serde.rs.in
+++ b/src/encode/pattern/serde.rs.in
@@ -1,7 +1,6 @@
+/// The pattern encoder's configuration.
 #[derive(Deserialize)]
 #[serde(deny_unknown_fields)]
 pub struct PatternEncoderConfig {
-    pub pattern: Option<String>,
-    #[serde(skip_deserializing)]
-    _p: (),
+    pattern: Option<String>,
 }
