--- a/src/filter/threshold/serde.rs.in
+++ b/src/filter/threshold/serde.rs.in
@@ -1,9 +1,6 @@
-use log::LogLevelFilter;
-
+/// The threshold filter's configuration.
 #[derive(Deserialize)]
 pub struct ThresholdFilterConfig {
     #[serde(deserialize_with = "::priv_serde::de_filter")]
-    pub level: LogLevelFilter,
-    #[serde(skip_deserializing)]
-    _p: (),
+    level: LogLevelFilter,
 }
