Make delete roller config opaque

--- a/src/append/rolling_file/policy/compound/roll/delete/config.rs.in
+++ b/src/append/rolling_file/policy/compound/roll/delete/config.rs.in
@@ -2,4 +2,6 @@
 #[derive(Deserialize)]
 #[serde(deny_unknown_fields)]
 pub struct DeleteRollerConfig {
+    #[serde(skip_deserializing)]
+    _p: (),
 }
