Move encoder config to encoder

--- a/src/append/console/serde.rs.in
+++ b/src/append/console/serde.rs.in
@@ -2,6 +2,6 @@
 #[derive(Deserialize)]
 #[serde(deny_unknown_fields)]
 pub struct ConsoleAppenderConfig {
-    encoder: Option<Encoder>,
+    encoder: Option<EncoderConfig>,
 }
 
