--- a/src/append/rolling_file/config.rs.in
+++ b/src/append/rolling_file/config.rs.in
@@ -4,6 +4,6 @@
 pub struct RollingFileAppenderConfig {
     path: String,
     append: Option<bool>,
-    encoder: Option<Encoder>,
+    encoder: Option<EncoderConfig>,
     policy: Policy,
 }
