--- a/src/append/file/serde.rs.in
+++ b/src/append/file/serde.rs.in
@@ -3,6 +3,6 @@
 #[serde(deny_unknown_fields)]
 pub struct FileAppenderConfig {
     path: String,
-    encoder: Option<Encoder>,
+    encoder: Option<EncoderConfig>,
     append: Option<bool>,
 }
