--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ antidote = "1.0"
 chrono = "0.2"
 crossbeam = "0.2.9"
 flate2 = { version = "0.2", optional = true }
+fnv = "1.0"
 humantime = "1.0"
 libc = "0.2"
 log = "0.3"
