--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ rust:
 - 1.10.0
 script:
 - cargo test
-- cargo test --features "yaml json toml gzip"
+- cargo test --features "yaml_format json_format toml_format gzip"
