--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ repository = "https://github.com/sfackler/log4rs"
 documentation = "https://sfackler.github.io/log4rs/doc/v0.4.8/log4rs"
 
 [features]
-yaml = ["serde_yaml"]
-json = ["serde_json"]
+yaml_format = ["serde_yaml"]
+json_format = ["serde_json"]
+toml_format = ["toml"]
 gzip = ["flate2"]
 
 [dependencies]
