--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ yaml_format = ["serde_yaml"]
 json_format = ["serde_json"]
 toml_format = ["toml"]
 
-console_appender = ["console_writer", "simple_writer", "libc", "kernel32-sys", "winapi"]
+console_appender = ["console_writer", "simple_writer"]
 file_appender = ["simple_writer"]
 rolling_file_appender = ["simple_writer"]
 compound_policy = []
@@ -24,7 +24,7 @@ size_trigger = []
 json_encoder = ["serde_json", "chrono"]
 pattern_encoder = ["chrono"]
 ansi_writer = []
-console_writer = ["ansi_writer"]
+console_writer = ["ansi_writer", "libc", "kernel32-sys", "winapi"]
 simple_writer = []
 threshold_filter = []
 
