--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ yaml_format = ["serde_yaml"]
 json_format = ["serde_json"]
 toml_format = ["toml"]
 
-console_appender = ["console_writer", "simple_writer"]
-file_appender = ["antidote", "simple_writer"]
-rolling_file_appender = ["antidote", "simple_writer"]
+console_appender = ["console_writer", "simple_writer", "pattern_encoder"]
+file_appender = ["antidote", "simple_writer", "pattern_encoder"]
+rolling_file_appender = ["antidote", "simple_writer", "pattern_encoder"]
 compound_policy = []
 delete_roller = []
 fixed_window_roller = []
