--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,6 @@ crossbeam = "0.2.9"
 flate2 = { version = "0.2", optional = true }
 fnv = "1.0"
 humantime = { version = "1.0", optional = true }
-libc = { version = "0.2", optional = true }
 log = "0.3"
 serde = { version = "0.8", optional = true }
 serde-value = { version = "0.3", optional = true }
@@ -52,6 +51,9 @@ toml = { version = "0.2", optional = true, default_features = false, features = 
 [target.'cfg(windows)'.dependencies]
 kernel32-sys = { version = "0.2", optional = true }
 winapi = { version = "0.2", optional = true }
+
+[target.'cfg(not(windows))'.dependencies]
+libc = { version = "0.2", optional = true }
 
 [dev-dependencies]
 tempdir = "0.3"
