--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "A highly configurable multi-output logging implementation for the
 license = "MIT/Apache-2.0"
 repository = "https://github.com/sfackler/log4rs"
 documentation = "https://sfackler.github.io/log4rs/doc/v0.4.8/log4rs"
+readme = "README.md"
 
 [features]
 default = ["console_appender", "file_appender", "pattern_encoder", "file", "yaml_format"]
