--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ flate2 = { version = "0.2", optional = true }
 fnv = "1.0"
 humantime = { version = "1.0", optional = true }
 log = "0.3"
-log-mdc = { git = "https://github.com/sfackler/rust-log-mdc", optional = true }
+log-mdc = { version = "0.1", optional = true }
 serde = { version = "0.8", optional = true }
 serde-value = { version = "0.3", optional = true }
 typemap = { version = "0.3", optional = true }
