Allow the console appender to write to stderr
Closes #37

--- a/src/append/console/serde.rs.in
+++ b/src/append/console/serde.rs.in
@@ -2,6 +2,8 @@
 #[derive(Deserialize)]
 #[serde(deny_unknown_fields)]
 pub struct ConsoleAppenderConfig {
+    #[serde(default)]
+    stderr: bool,
     encoder: Option<EncoderConfig>,
 }
 
