Remove codegen files!

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: rust
 cache: cargo
 rust:
 - nightly
-- 1.13.0
+- beta
 script:
 - cargo test --no-default-features
 - (for feature in $(cargo read-manifest | jq -r '.features|keys|join("\n")'); do cargo test --no-default-features --features $feature || exit 1; done)
