--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 [features]
 default = ["console_appender", "file_appender", "pattern_encoder", "file", "yaml_format"]
 
-file = ["humantime", "serde", "serde-value", "typemap"]
+file = ["humantime", "serde", "serde_derive", "serde-value", "typemap"]
 yaml_format = ["serde_yaml"]
 json_format = ["serde_json"]
 
@@ -54,6 +54,7 @@ humantime = { version = "1.0", optional = true }
 log = "0.3"
 log-mdc = { version = "0.1", optional = true }
 serde = { version = "0.9", optional = true }
+serde_derive = { version = "0.9", optional = true }
 serde-value = { version = "0.3", optional = true }
 typemap = { version = "0.3", optional = true }
 serde_json = { version = "0.9", optional = true }
