--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT/Apache-2.0"
 repository = "https://github.com/sfackler/log4rs"
 documentation = "https://sfackler.github.io/log4rs/doc/v0.5.2/log4rs"
 readme = "README.md"
+keywords = ["logger", "log", "logging"]
 
 [features]
 default = ["console_appender", "file_appender", "pattern_encoder", "file", "yaml_format"]
