--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Steven Fackler <sfackler@gmail.com>"]
 description = "A highly configurable multi-output logging implementation for the `log` facade"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/sfackler/log4rs"
-documentation = "https://sfackler.github.io/log4rs/doc/v0.6.1/log4rs"
+documentation = "https://docs.rs/log4rs/0.6.1"
 readme = "README.md"
 keywords = ["logger", "log", "logging"]
 
