--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,13 +55,13 @@ fnv = "1.0"
 humantime = { version = "1.0", optional = true }
 log = "0.3"
 log-mdc = { version = "0.1", optional = true }
-serde = { version = "0.9", optional = true }
-serde_derive = { version = "0.9", optional = true }
+serde = { version = "1", optional = true }
+serde_derive = { version = "1", optional = true }
 serde-value = { version = "0.4", optional = true }
 typemap = { version = "0.3", optional = true }
-serde_json = { version = "0.9", optional = true }
+serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.6.0-rc1", optional = true }
-toml = { version = "0.3", optional = true }
+toml = { version = "0.4", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 kernel32-sys = { version = "0.2", optional = true }
@@ -72,3 +72,7 @@ libc = { version = "0.2", optional = true }
 
 [dev-dependencies]
 tempdir = "0.3"
+
+[replace]
+"serde-value:0.4.1" = { git = "https://github.com/sfackler/serde-value", branch = "serde-1" }
+"serde_yaml:0.6.2" = { git = "https://github.com/sfackler/serde-yaml", branch = "serde-1" }
