Fix feature dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ compound_policy = []
 delete_roller = []
 fixed_window_roller = []
 size_trigger = []
-json_encoder = ["serde", "serde_json", "chrono", "log-mdc"]
+json_encoder = ["serde", "serde_json", "chrono", "log-mdc", "serde_derive"]
 pattern_encoder = ["chrono", "log-mdc"]
 ansi_writer = []
 console_writer = ["ansi_writer", "libc", "kernel32-sys", "winapi"]
