--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ delete_roller = []
 fixed_window_roller = []
 size_trigger = []
 json_encoder = ["serde", "serde_json", "chrono", "log-mdc", "serde_derive"]
-pattern_encoder = ["chrono", "log-mdc"]
+pattern_encoder = ["chrono", "log-mdc", "libc"]
 ansi_writer = []
 console_writer = ["ansi_writer", "libc", "kernel32-sys", "winapi"]
 simple_writer = []
