--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,13 @@ readme = "README.md"
 keywords = ["logger", "log", "logging"]
 
 [features]
-default = ["all_components", "gzip", "file", "yaml_format"]
+default = ["all_components", "gzip", "file", "yaml_format", "xml_format"]
 
 file = ["humantime", "serde", "serde_derive", "serde-value", "typemap"]
 yaml_format = ["serde_yaml"]
 json_format = ["serde_json"]
 toml_format = ["toml"]
+xml_format = ["serde-xml-rs"]
 
 console_appender = ["console_writer", "simple_writer", "pattern_encoder"]
 file_appender = ["antidote", "simple_writer", "pattern_encoder"]
@@ -62,6 +63,7 @@ typemap = { version = "0.3", optional = true }
 serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.7", optional = true }
 toml = { version = "0.4", optional = true }
+serde-xml-rs = { version = "0.2.1", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 kernel32-sys = { version = "0.2", optional = true }
