--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ crossbeam = "0.3"
 flate2 = { version = "1.0", optional = true }
 fnv = "1.0"
 humantime = { version = "1.0", optional = true }
-log = { version = "0.4.0-rc.1", features = ["std"] }
+log = { version = "0.4.0", features = ["std"] }
 log-mdc = { version = "0.1", optional = true }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
