--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ yaml_format = ["serde_yaml"]
 json_format = ["serde_json"]
 toml_format = ["toml"]
 xml_format = ["serde-xml-rs"]
+ron_format = ["ron"]
 
 console_appender = ["console_writer", "simple_writer", "pattern_encoder"]
 file_appender = ["antidote", "simple_writer", "pattern_encoder"]
@@ -55,6 +56,7 @@ fnv = "1.0"
 humantime = { version = "1.0", optional = true }
 log = { version = "0.4.0", features = ["std"] }
 log-mdc = { version = "0.1", optional = true }
+ron = { version = "0.2.0", optional = true }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 serde-value = { version = "0.5", optional = true }
