--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,8 @@ compound_policy = []
 delete_roller = []
 fixed_window_roller = []
 size_trigger = []
-json_encoder = ["serde", "serde_json", "chrono", "log-mdc", "serde_derive", "log/serde"]
-pattern_encoder = ["chrono", "log-mdc"]
+json_encoder = ["serde", "serde_json", "log-mdc", "serde_derive", "log/serde"]
+pattern_encoder = ["log-mdc"]
 ansi_writer = []
 console_writer = ["ansi_writer", "libc", "winapi"]
 simple_writer = []
@@ -48,7 +48,7 @@ gzip = ["flate2"]
 
 [dependencies]
 antidote = { version = "1.0", optional = true }
-chrono = { version = "0.4", optional = true }
+chrono = { version = "0.4" }
 crossbeam = "0.3"
 flate2 = { version = "1.0", optional = true }
 fnv = "1.0"
