--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
 name = "log4rs"
-version = "0.8.2"
+version = "0.8.3"
 authors = ["Steven Fackler <sfackler@gmail.com>"]
 description = "A highly configurable multi-output logging implementation for the `log` facade"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/sfackler/log4rs"
 readme = "README.md"
 keywords = ["logger", "log", "logging"]
+
+[badges]
+maintenance = { status = "looking-for-a-maintainer" }
 
 [features]
 default = ["all_components", "gzip", "file", "yaml_format"]
