--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,8 +51,8 @@ gzip = ["flate2"]
 
 [dependencies]
 antidote = { version = "1.0", optional = true }
+arc-swap = "0.3"
 chrono = { version = "0.4", optional = true }
-crossbeam = "0.4.1"
 flate2 = { version = "1.0", optional = true }
 fnv = "1.0"
 humantime = { version = "1.0", optional = true }
@@ -65,8 +65,8 @@ thread-id = { version = "3.3", optional = true }
 typemap = { version = "0.3", optional = true }
 serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.8.4", optional = true }
-toml = { version = "0.4", optional = true }
-serde-xml-rs = { version = "0.2.1", optional = true }
+toml = { version = "0.5", optional = true }
+serde-xml-rs = { version = "0.2", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", optional = true, features = ["handleapi", "minwindef", "processenv", "winbase", "wincon"] }
