--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "log4rs"
-version = "0.8.2"
+version = "0.8.3"
 authors = ["Steven Fackler <sfackler@gmail.com>"]
 description = "A highly configurable multi-output logging implementation for the `log` facade"
 license = "MIT/Apache-2.0"
@@ -9,7 +9,7 @@ readme = "README.md"
 keywords = ["logger", "log", "logging"]
 
 [badges]
-maintenance = { status = "looking-for-a-maintainer" }
+maintenance = { status = "looking-for-maintainer" }
 
 [features]
 default = ["all_components", "gzip", "file", "yaml_format"]
